--- a/signup.html
+++ b/signup.html
@@ -4,9 +4,9 @@
     <!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="../resource/css/animate.css">
+	<link rel="stylesheet" href="./resources/animate.css">
 	<!-- Custom Stylesheet -->
-	<link rel="stylesheet" href="../resource/css/style.css">
+	<link rel="stylesheet" href="./resources/style.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <title>Register</title>
